<resources>
    <string name="app_name">Mini Calculator</string>
    <string name="num_2">Num 2</string>
    <string name="num_1">์Num 1</string>
    <string name="mini_calaulator">Mini Calaulator</string>
    <string name="all">=</string>
    <string name="result">Result</string>
    <string name="clear">Clear</string>
    <string name="modulo">Modulo</string>
    <string name="divider">Divider</string>
    <string name="multiplay">Multiplay</string>
    <string name="minas">Minas</string>
    <string name="plus">Plus</string>
</resources>